# digitalib-api-interna/src/main/java/es/caib/digitalib/api/interna/all/dadesobertes/transaccions/Transaccions.java
@@ -2,22 +2,24 @@ package es.caib.digitalib.api.interna.all.dadesobertes.transaccions;
 
 import java.util.List;
 
-import org.fundaciobit.pluginsib.utils.rest.OpenDataPagination;
+import org.fundaciobit.pluginsib.utils.rest.ReuseDataPagination;
+
+
 
 /**
  * 
  * @author anadal (u80067)
  *
  */
-public class Transaccions extends OpenDataPagination<TransaccioInfo> {
+public class Transaccions extends ReuseDataPagination<TransaccioInfo> {
 
     public Transaccions() {
         super();
     }
 
     public Transaccions(List<TransaccioInfo> data, int page, int pagesize, int totalpages, int totalcount,
-            String nextUrl, String dateDownload) {
-        super(data, page, pagesize, totalpages, totalcount, nextUrl, dateDownload);
+            String nextUrl, String dateDownload, String name) {
+        super(data, page, pagesize, totalpages, totalcount, nextUrl, dateDownload, name);
     }
 
 }
